# Arcturus

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
docs/: SIMULATION_REPORT.md  architecture.md
firmware/: Cargo.toml
firmware/.cargo/: config.toml
firmware/src/: main.rs
firmware/src/api/: mod.rs
firmware/src/compute/: evolution.rs  laplacian.rs  mod.rs
firmware/src/hal/: analog.rs  gpio.rs  mod.rs  spi.rs
firmware/src/memory/: edge_cache.rs  eigen_manager.rs  mod.rs  time_slicer.rs
firmware/src/sync/: block_universe.rs  mod.rs
pc/arcturus_cli/: Cargo.toml
pc/arcturus_cli/src/: main.rs
pc/arcturus_compiler/: Cargo.toml  README.md  pyproject.toml  requirements.txt
pc/arcturus_compiler/arcturus_compiler/: __init__.py  binary_writer.py  init.py  main.py  model_loader.py  quantizer.py  validator.py  w_mapper.py
pc/arcturus_compiler/src/: lib.rs  main.rs
tests/: Cargo.toml
tests/firmware/: test_alpha_dead_zone.rs  test_edge_cache.rs  test_frobenius_norm.rs  test_security.rs  test_time_reversibility.rs
