[workspace]
members = [
    "firmware",
    "pc/arcturus_cli",
    "pc/arcturus_compiler",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Arcturus Team"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arcturus-os/arcturus"

[workspace.dependencies]
# Firmware dependencies (embedded)
embedded-hal = "1.0"
nb = "1.1"
cortex-m = "0.7"
cortex-m-rt = "0.7"
riscv = "0.11"
riscv-rt = "0.12"
panic-halt = "0.2"
heapless = "0.8"
libm = "0.2"

# PC dependencies
clap = { version = "4.5", features = ["derive"] }
serialport = "4.3"
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nalgebra = "0.33"
ndarray = "0.15"

[profile.dev]
panic = "abort"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = false
