[package]
name = "arcturus-compiler"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "arcturus_compiler"
path = "src/lib.rs"

[[bin]]
name = "arcturus-compiler"
path = "src/main.rs"

[dependencies]
# PyTorch model parsing
serde = { workspace = true }
serde_json = { workspace = true }
nalgebra = { workspace = true }
ndarray = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# CLI
clap = { workspace = true }

[dev-dependencies]
tempfile = "3.9"
