[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arcturus-compiler"
version = "0.1.0"
description = "Compiler for mapping PyTorch models into Arcturus W matrix format"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "torch>=2.1",
  "transformers>=4.40",
  "safetensors>=0.4",
]

[project.scripts]
arcturus-compiler = "arcturus_compiler.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["arcturus_compiler*"]
